--- a/src/ng-vcl/password-input/password-input.component.html
+++ b/src/ng-vcl/password-input/password-input.component.html
@@ -1,7 +1,7 @@
 <ng-content></ng-content>
 <button vcl-button
-        [prepIcon]="buttonIcon" 
+        [icon]="buttonIcon" 
         [disabled]="disabled"
         class="vclSquare" 
-        (tap)="toggle()">
+        (click)="toggle()">
 </button>
