--- a/demo/src/demos/password-input/demo.component.html
+++ b/demo/src/demos/password-input/demo.component.html
@@ -1,11 +1,11 @@
 <h3>Password input</h3>
-<vcl-password-input-container>
-  <input vcl-password-input [(ngModel)]="password" placeholder="Enter password">
-</vcl-password-input-container>
+<vcl-password-input>
+  <input vcl-input vcl-password-input [(ngModel)]="password" placeholder="Enter password">
+</vcl-password-input>
 <br>
 <b>Password input value:</b> {{password}}
 
 <h3>Password input (disabled)</h3>
-<vcl-password-input-container [disabled]="true">
-  <input vcl-password-input placeholder="Enter password">
-</vcl-password-input-container> 
+<vcl-password-input [disabled]="true">
+  <input vcl-input vcl-password-input placeholder="Enter password">
+</vcl-password-input> 
