input: rename autoselect selector

--- a/demo/src/demos/input/demo.component.html
+++ b/demo/src/demos/input/demo.component.html
@@ -6,7 +6,7 @@
 <br>
 <br>
 <h3>Input (autoselect)</h3>
-<input vcl-input vcl-input-autoselect />
+<input vcl-input autoselect [value]="'Foo'" />
 
 <br>
 <br>
