--- a/demo/src/demos/button-group/demo.component.html
+++ b/demo/src/demos/button-group/demo.component.html
@@ -1,23 +1,23 @@
 <h3>SelectionMode: Single</h3>
 <vcl-button-group [(ngModel)]="idx1">
-  <button vcl-button>Action 1</button>
-  <button vcl-button>Action 2</button>
-  <button vcl-button>Action 3</button>
+  <button vcl-button vcl-button-group>Action 1</button>
+  <button vcl-button vcl-button-group>Action 2</button>
+  <button vcl-button vcl-button-group>Action 3</button>
 </vcl-button-group>
 <p>Selected index: {{idx1}}</p>
 
 <h3>SelectionMode: Multiple</h3>
 <vcl-button-group mode="multiple" [(ngModel)]="idx2">
-  <button vcl-button>Action 1</button>
-  <button vcl-button>Action 2</button>
-  <button vcl-button>Action 3</button>
+  <button vcl-button vcl-button-group>Action 1</button>
+  <button vcl-button vcl-button-group>Action 2</button>
+  <button vcl-button vcl-button-group>Action 3</button>
 </vcl-button-group>
 <p>Selected index: {{idx2}}</p>
 
 
 <h3>Disabled</h3>
 <vcl-button-group [disabled]="true" mode="multiple">
-  <button vcl-button>Action 1</button>
-  <button vcl-button>Action 2</button>
-  <button vcl-button>Action 3</button>
+  <button vcl-button vcl-button-group>Action 1</button>
+  <button vcl-button vcl-button-group>Action 2</button>
+  <button vcl-button vcl-button-group>Action 3</button>
 </vcl-button-group>
