Update to ng6/rxjs6

--- a/demo/src/demos/button/demo.component.html
+++ b/demo/src/demos/button/demo.component.html
@@ -16,4 +16,4 @@
 <br><br>
 <button vcl-button [selectable]="true" (select)="someAction($event)">Selectable button (preselected)</button>
 <br><br>
-<button vcl-button (click)="changeButtonState()" [busy]="true" label="Busy button"></button>
+<button vcl-button [busy]="true" label="Busy button"></button>
