--- a/demo/src/demos/autocomplete/demo.component.html
+++ b/demo/src/demos/autocomplete/demo.component.html
@@ -1,7 +1,7 @@
 <h3>vcl-input with fixed data</h3>
 
 <vcl-embedded-input-group prepIcon="fa:search">
-  <input vcl-input vcl-embedded-input placeholder="Search"  [vcl-input-autocomplete]="acCountry" (change)="onChange($event);" />
+  <input vcl-input vcl-embedded-input-group placeholder="Search"  [vcl-input-autocomplete]="acCountry" (change)="onChange($event);" />
 </vcl-embedded-input-group>
 
 <h3>vcl-token-input with fixed data</h3>
