--- a/demo/src/demos/notifier/demo.component.html
+++ b/demo/src/demos/notifier/demo.component.html
@@ -1,10 +1,10 @@
 <vcl-button-group [(ngModel)]="position" mode="single">
-  <button vcl-button label="Top Right"></button>
-  <button vcl-button label="Top"></button>
-  <button vcl-button label="Top Left"></button>
-  <button vcl-button label="Bottom Right"></button>
-  <button vcl-button label="Bottom"></button>
-  <button vcl-button label="Bottom Left"></button>
+  <button vcl-button vcl-button-group label="Top Right"></button>
+  <button vcl-button vcl-button-group label="Top"></button>
+  <button vcl-button vcl-button-group label="Top Left"></button>
+  <button vcl-button vcl-button-group label="Bottom Right"></button>
+  <button vcl-button vcl-button-group label="Bottom"></button>
+  <button vcl-button vcl-button-group label="Bottom Left"></button>
 </vcl-button-group>
 
 <br><br>
