Remove integrated l10n support

--- a/src/jss-form/jss-form-object.component.html
+++ b/src/jss-form/jss-form-object.component.html
@@ -90,8 +90,8 @@
         <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
         <vcl-flip-switch
                          [id]="fo.id"
-                         onLabel="{{'Yes' | loc }}"
-                         offLabel="{{'No' | loc}}"
+                         onLabel="{{'Yes' }}"
+                         offLabel="{{'No'}}"
                          [formControlName]="fo.key">
         </vcl-flip-switch>
       </ng-container>
