notifier: Implement observer interface + remove text parameter in notifier service

--- a/demo/src/demos/notifier/demo.component.html
+++ b/demo/src/demos/notifier/demo.component.html
@@ -9,6 +9,7 @@
 
 <br><br>
 
+<button vcl-button (tap)="default()" label="An message"></button><br><br>
 <button vcl-button (tap)="info()" label="An info message"></button><br><br>
 <button vcl-button (tap)="success()" label="A success message"></button><br><br>
 <button vcl-button (tap)="warning()" label="A warning"></button><br><br>
