--- a/demo/src/demos/label/demo.component.html
+++ b/demo/src/demos/label/demo.component.html
@@ -1,17 +1,17 @@
 <h3>Default label:</h3>
-<vcl-label label="default"></vcl-label>
+<span vcl-label>default</span>
 
 <h3>Primary label:</h3>
-<vcl-label label="primary" type="primary"></vcl-label>
+<span vcl-label="primary">primary</span>
 
 <h3>Success label:</h3>
-<vcl-label label="success" type="success"></vcl-label>
+<span vcl-label="success">success</span>
 
 <h3>Info label:</h3>
-<vcl-label label="info" type="info"></vcl-label>
+<span vcl-label="info">info</span>
 
 <h3>Warning label:</h3>
-<vcl-label label="warning" type="warning"></vcl-label>
+<span vcl-label="warning">warning</span>
 
 <h3>Error label:</h3>
-<vcl-label label="error" type="error"></vcl-label>
+<span vcl-label="error">error</span>
