--- a/demo/src/demos/icogram/demo.component.html
+++ b/demo/src/demos/icogram/demo.component.html
@@ -4,8 +4,6 @@
 <br><br>
 <vcl-icogram label="prep/app icons" prepIcon="fa:chevron-right" appIcon="fa:chevron-right"></vcl-icogram>
 <br><br>
-<vcl-icogram label="flex label" appIcon="fa:chevron-right" flexLabel=true class="vclLayoutHorizontal"></vcl-icogram>
-<br><br>
-<vcl-icogram label="centered flex label" appIcon="fa:chevron-right" flexLabel=true flexLabelCentered=true class="vclLayoutHorizontal"></vcl-icogram>
+<vcl-icogram label="flex label" prepIcon="fa:chevron-right" appIcon="fa:chevron-right" class="vclLayoutHorizontal" [vclLayout]="{label: 'vclLayoutFlex vclAlignCentered'}"></vcl-icogram>
 <br><br>
 This is <span vcl-icogram label="an inline" prepIcon="fa:chevron-right" appIcon="fa:chevron-right"></span> icogram
