--- a/src/ng-vcl/icogram/icogram.component.html
+++ b/src/ng-vcl/icogram/icogram.component.html
@@ -1,16 +1,8 @@
-<ng-container *ngIf="!span; else spanTmp">
-  <div vcl-icon *ngIf="prepIcon || prepIconSrc" [icon]="prepIcon" [src]="prepIconSrc"></div>
-  <div *ngIf="!!label" [class.vclLayoutFlex]="!!flexLabel" [class.vclAlignCentered]="!!flexLabelCentered" class="vclText">
-    {{label}}
-  </div>
-  <ng-content></ng-content>
-  <div vcl-icon *ngIf="appIcon || appIconSrc" [icon]="appIcon" [src]="appIconSrc"></div>
-</ng-container>
-<ng-template #spanTmp>
-  <span vcl-icon *ngIf="prepIcon || prepIconSrc" [icon]="prepIcon" [src]="prepIconSrc"></span>
-  <span *ngIf="!!label" class="vclText">
-    {{label}}
-  </span>
-  <ng-content></ng-content>
-  <span vcl-icon *ngIf="appIcon || appIconSrc" [icon]="appIcon" [src]="appIconSrc"></span>
-</ng-template>
+<div vclLayoutTarget="prepIcon" vcl-icon *ngIf="prepIcon || prepIconSrc" [icon]="prepIcon">
+  <ng-content select="[prepIcon]"></ng-content>
+</div>
+<div vclLayoutTarget="label" *ngIf="!!label" class="vclText">{{label}}</div>
+<ng-content></ng-content>
+<div vclLayoutTarget="appIcon" vcl-icon *ngIf="appIcon || appIconSrc" [icon]="appIcon">
+  <ng-content select="[appIcon]"></ng-content>
+</div>
