--- a/src/ng-vcl/gallery/gallery-body.component.html
+++ b/src/ng-vcl/gallery/gallery-body.component.html
@@ -7,7 +7,7 @@
     <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); position: absolute; left: 0; top: 0">
   </div>
 
-  <button *ngIf="target.selectedImage < target.images.length - 1 || target.wrap" vcl-button class="vclButton vclGalleryNextButton" (click)="selectNext()">
+  <button *ngIf="target.selectedImage < (target.images ? target.images.length - 1 : 0) || target.wrap" vcl-button class="vclButton vclGalleryNextButton" (click)="selectNext()">
     <div class="vclIcon fa fa-caret-right" aria-hidden="true" aria-label="Previous" role="img"></div>
   </button>
 </div>
