--- a/src/ng-vcl/gallery/gallery-footer.component.html
+++ b/src/ng-vcl/gallery/gallery-footer.component.html
@@ -1,3 +1,3 @@
 <div class="vclGalleryFooter vclAlignCentered">
-  {{ target.selectedImage + 1 }}&nbsp;/&nbsp;{{ target.images.length }}
+  {{ target.selectedImage + 1 }}&nbsp;/&nbsp;{{ target.images ? target.images.length : 0 }}
 </div>
