--- a/demo/src/demos/badge/demo.component.html
+++ b/demo/src/demos/badge/demo.component.html
@@ -1,17 +1,17 @@
-<h3>Default badge:</h3>
+<h3>Default badge</h3>
 <span vcl-badge>default</span>
 
-<h3>Primary badge:</h3>
+<h3>Primary badge</h3>
 <span vcl-badge="primary">primary</span>
 
-<h3>Success badge:</h3>
+<h3>Success badge</h3>
 <span vcl-badge="success">success</span>
 
-<h3>Info badge:</h3>
+<h3>Info badge</h3>
 <span vcl-badge="info">info</span>
 
-<h3>Warning badge:</h3>
+<h3>Warning badge</h3>
 <span vcl-badge="warning">warning</span>
 
-<h3>Error badge:</h3>
+<h3>Error badge</h3>
 <span vcl-badge="error">error</span>
