--- a/demo/src/demos/busy-indicator/demo.component.html
+++ b/demo/src/demos/busy-indicator/demo.component.html
@@ -1,14 +1,14 @@
-<h3>Simple busy indicator:</h3>
+<h3>Simple busy indicator</h3>
 <vcl-busy-indicator></vcl-busy-indicator>
 <br><br>
 
-<h3>Busy indicator with label and alternative icon:</h3>
+<h3>Busy indicator with label and alternative icon</h3>
 <vcl-busy-indicator type="straight">
   Loading...
 </vcl-busy-indicator>
 <br><br>
 
-<h3>Horizontal busy indicators:</h3>
+<h3>Horizontal busy indicators</h3>
 <vcl-busy-indicator [layout]="'horizontal'">
   Loading...
 </vcl-busy-indicator>
@@ -18,19 +18,19 @@
 </vcl-busy-indicator>
 <br><br>
 
-<h3>Indicator from icons:</h3>
+<h3>Indicator from icons</h3>
 <vcl-busy-indicator classSrc="fa fa-circle-o-notch fa-spin fa-3x fa-fw">
   Loading...
 </vcl-busy-indicator>
 <br><br>
 
-<h3>Indicator from images:</h3>
+<h3>Indicator from images</h3>
 <vcl-busy-indicator imageSrc="http://www.polidoor.com/assets/img/loading.gif">
   Loading...
 </vcl-busy-indicator>
 <br><br>
 
-<h3>Busy container:</h3>
+<h3>Busy container</h3>
 <div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isBusy" busyLabel="Loading..." busyIndicatorType="straight">
   <div style="padding:0.5em" class="vclLayoutFlex">
     Busy container<br>
@@ -39,7 +39,7 @@
 </div>
 <br><br>
 
-<h3>Horizontal busy container:</h3>
+<h3>Horizontal busy container</h3>
 <div class="vclContainer vclLayoutHorizontal" style="height:15em" [vclBusyIndicatorCover]="isVerticalBusy" busyLabel="Loading..." busyIndicatorType="circle" busyIndicatorDirection="horizontal">
   <div style="padding:0.5em" class="vclLayoutFlex">
     Busy container<br>
