--- a/demo/src/demos/slider/demo.component.html
+++ b/demo/src/demos/slider/demo.component.html
@@ -1,8 +1,8 @@
-<h3>basic:</h3>
+<h3>Basic</h3>
 <vcl-slider [(ngModel)]="value1"></vcl-slider>
 Value: {{value1}}
 
-<h3>With a scale:</h3>
+<h3>With a scale</h3>
 <vcl-slider 
   [(ngModel)]="value2" 
   [min]="0" 
@@ -11,7 +11,7 @@ Value: {{value1}}
 </vcl-slider>
 Value: {{value2}}
 
-<h3>With value locked to the scale:</h3>
+<h3>With value locked to the scale</h3>
 <vcl-slider 
   [(ngModel)]="value3" 
   [min]="0" 
@@ -22,7 +22,7 @@ Value: {{value2}}
 Value: {{value3}}
 
 
-<h3>custom labeled scale:</h3>
+<h3>custom labeled scale</h3>
 <vcl-slider 
   [(ngModel)]="value4" 
   [min]="0" 
@@ -33,7 +33,7 @@ Value: {{value3}}
 Value: {{value4}}
 
 
-<h3>disabled:</h3>
+<h3>disabled</h3>
 
 <vcl-slider 
   [(ngModel)]="value5" 
