--- a/demo/src/demos/checkbox/demo.component.html
+++ b/demo/src/demos/checkbox/demo.component.html
@@ -1,19 +1,19 @@
-<h3>Checkbox:</h3>
+<h3>Checkbox</h3>
 <vcl-checkbox [(checked)]="isChecked"></vcl-checkbox>
 <br>
 <b>State:</b> {{isChecked}}
 
-<h3>Disabled:</h3>
+<h3>Disabled</h3>
 <vcl-checkbox [disabled]="true"></vcl-checkbox>
 
-<h3>Checkbox with content:</h3>
+<h3>Checkbox with content</h3>
 <h4>default</h4>
 <vcl-checkbox [(checked)]="isChecked2">Label</vcl-checkbox>
 
 <h4>icon right</h4>
 <vcl-checkbox [(checked)]="isChecked3" iconPosition="right">Label</vcl-checkbox>
 
-<h3>Checkbox (ngModel):</h3>
+<h3>Checkbox (ngModel)</h3>
 <vcl-checkbox [(ngModel)]="isChecked4"></vcl-checkbox>
 <br>
 <b>State:</b> {{isChecked4}}
