--- a/demo/src/demos/label/demo.component.html
+++ b/demo/src/demos/label/demo.component.html
@@ -1,17 +1,17 @@
-<h3>Default label:</h3>
+<h3>Default label</h3>
 <span vcl-label>default</span>
 
-<h3>Primary label:</h3>
+<h3>Primary label</h3>
 <span vcl-label="primary">primary</span>
 
-<h3>Success label:</h3>
+<h3>Success label</h3>
 <span vcl-label="success">success</span>
 
-<h3>Info label:</h3>
+<h3>Info label</h3>
 <span vcl-label="info">info</span>
 
-<h3>Warning label:</h3>
+<h3>Warning label</h3>
 <span vcl-label="warning">warning</span>
 
-<h3>Error label:</h3>
+<h3>Error label</h3>
 <span vcl-label="error">error</span>
