--- a/demo/src/demos/token/demo.component.html
+++ b/demo/src/demos/token/demo.component.html
@@ -1,11 +1,11 @@
-<h3>single tokens:</h3>
+<h3>single tokens</h3>
 <vcl-token label="my token"></vcl-token>
 <vcl-token label="my selected token" [selected]="true"></vcl-token>
 <vcl-token label="my removable token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
 
 <br/>
 
-<h3>tokenlist:</h3>
+<h3>tokenlist</h3>
 <vcl-token-list [selectable]="true" (tokensChange)="onListChange($event);">
   <vcl-token label="my token 1" value="1"></vcl-token>
   <vcl-token label="my token 2" [selected]="true" value="2"></vcl-token>
@@ -13,12 +13,12 @@
 
 <br/>
 
-<h3>tokeninput:</h3>
+<h3>tokeninput</h3>
 <vcl-token-input-container (tokensChange)="onInputChange($event);">
   <input vcl-token-input />
 </vcl-token-input-container>
 
-<h3>tokeninput (disabled):</h3>
+<h3>tokeninput (disabled)</h3>
 <vcl-token-input-container [disabled]="true">
   <input vcl-token-input />
 </vcl-token-input-container>
