--- a/demo/src/demos/token/demo.component.html
+++ b/demo/src/demos/token/demo.component.html
@@ -2,6 +2,7 @@
 <vcl-token label="my token"></vcl-token>
 <vcl-token label="my selected token" [selected]="true"></vcl-token>
 <vcl-token label="my removable token" [removable]="true" (remove)="onRemove($event)"></vcl-token>
+<vcl-token label="my icon token" tokenIcon="fa:cog" [removable]="true" (remove)="onRemove($event)"></vcl-token>
 
 <br/>
 
@@ -15,10 +16,10 @@
 
 <h3>tokeninput</h3>
 <vcl-token-input-container (tokensChange)="onInputChange($event);">
-  <input vcl-token-input />
+  <input vcl-input vcl-token-input />
 </vcl-token-input-container>
 
 <h3>tokeninput (disabled)</h3>
 <vcl-token-input-container [disabled]="true">
-  <input vcl-token-input />
+  <input vcl-input vcl-token-input />
 </vcl-token-input-container>
