Dropdown support for appended or prepended icons

--- a/src/ng-vcl/dropdown/dropdown.component.html
+++ b/src/ng-vcl/dropdown/dropdown.component.html
@@ -29,7 +29,12 @@
       [class.vclHighlighted]="focused && meta.marked"
       [attr.aria-selected]="meta.selected"
       (tap)="onMetalistItemTap(meta)">
-      <div *ngIf="item.label" class="vclDropdownItemLabel">
+      <div vcl-icogram *ngIf="item.label" class="vclDropdownItemLabel"
+         [prepIcon]="item.prepIcon"
+         [appIcon]="item.appIcon"
+         [appIconSrc]="item.appIconSrc"
+         [prepIconSrc]="item.prepIconSrc"
+      >
         {{item.label}}
       </div>
       <div *ngIf="item.sublabel" class="vclDropdownItemSubLabel">
