--- a/demo/src/demos/dropdown/demo.component.html
+++ b/demo/src/demos/dropdown/demo.component.html
@@ -4,6 +4,13 @@
 </vcl-dropdown>
 
 <br/>
+<h3>single-select with prepended icon</h3>
+<vcl-dropdown [value]="10" (change)="onSelect($event)" [tabindex]="1">
+  <vcl-dropdown-option *ngFor="let item of items" prepIcon="fa:pencil" [value]="item.value" [disabled]="item.disabled" [label]="item.label"
+                       [sublabel]="item.sublabel"></vcl-dropdown-option>
+</vcl-dropdown>
+
+<br/>
 <h3>multi-select</h3>
 <vcl-dropdown [value]="[10]" (change)="onSelect($event)" [tabindex]="2" mode="multiple" [maxSelectableItems]="3">
   <vcl-dropdown-option *ngFor="let item of items" [value]="item.value" [disabled]="item.disabled" [label]="item.label" [sublabel]="item.sublabel"></vcl-dropdown-option>
