--- a/demo/src/demos/select/demo.component.html
+++ b/demo/src/demos/select/demo.component.html
@@ -4,8 +4,15 @@
 </vcl-select>
 
 <br>
+<h3>single-select with prepended icons</h3>
+<vcl-select [value]="3" label="Single select" (change)="onChange($event)" [tabindex]="1">
+  <vcl-select-option *ngFor="let item of items" prepIcon="fa:circle" [value]="item.value" [label]="item.label"
+                     [sublabel]="item.sublabel"></vcl-select-option>
+</vcl-select>
+
+<br>
 <h3>multi-select, 3 items selectable</h3>
-<vcl-select [value]="[3]" (change)="onChange($event)" mode="multiple" [maxSelectableItems]="3" [tabindex]="2">
+<vcl-select [value]="[3]"  (change)="onChange($event)" mode="multiple" [maxSelectableItems]="3" [tabindex]="2">
   <vcl-select-option *ngFor="let item of items" [value]="item.value" [label]="item.label" [sublabel]="item.sublabel"></vcl-select-option>
 </vcl-select>
 
