--- a/src/jss-form/jss-form-object.component.html
+++ b/src/jss-form/jss-form-object.component.html
@@ -4,37 +4,46 @@
     <ng-container [ngSwitch]="fo.formType">
 
       <ng-container  *ngSwitchCase="'text'">
-        <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
           <input vcl-input
                  [id]="fo.id"
                  type="text"
                  [class.vclError]="hasError"
                  [placeholder]="fo.placeholder"
-                 [formControlName]="fo.key" />
+                 [formControlName]="fo.key"
+                 [disabled]="fo.disabled"/>
         </vcl-input-control-group>
       </ng-container>
 
       <ng-container  *ngSwitchCase="'textarea'">
-        <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <textarea vcl-textarea [id]="fo.id"  [formControlName]="fo.key" [autogrow]="true" [minRows]="5" [maxRows]="10"></textarea>
+          <textarea vcl-textarea
+                    [id]="fo.id"
+                    [formControlName]="fo.key"
+                    [autogrow]="true"
+                    [minRows]="5"
+                    [maxRows]="10"
+                    [readonly]="fo.disabled"></textarea>
         </vcl-input-control-group>
       </ng-container>
 
       <ng-container  *ngSwitchCase="'password'">
-        <label vcl-form-control-label [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [required]="fo.required" [for]="fo.id"></label>
 
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
           <vcl-password-input
             [visibleIcon]="fo.schema.visibleIcon || ' fa fa-eye '"
             [invisibleIcon]="fo.schema.invisibleIcon || ' fa fa-eye-slash '"
           >
-            <input vcl-input vcl-password-input
-              [id]="fo.id"
-              [class.vclError]="hasError"
-              [placeholder]="fo.placeholder"
-              [formControlName]="fo.key" />
+            <input vcl-input
+                   vcl-password-input
+                   [id]="fo.id"
+                   [class.vclError]="hasError"
+                   [placeholder]="fo.placeholder"
+                   [formControlName]="fo.key"
+                   [disabled]="fo.disabled"/>
           </vcl-password-input>
         </vcl-input-control-group>
       </ng-container>
@@ -48,75 +57,81 @@
       </ng-container>
 
       <ng-container  *ngSwitchCase="'number'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
           <input vcl-input
-                  [id]="fo.id"
-                  type="number"
-                  valueType="number"
-                  placeholder="number"
-                  [class.vclError]="hasError"
-                  [name]="fo.key"
-                  [formControlName]="fo.key" />
+                 [id]="fo.id"
+                 type="number"
+                 valueType="number"
+                 placeholder="number"
+                 [class.vclError]="hasError"
+                 [name]="fo.key"
+                 [formControlName]="fo.key"
+                 [disabled]="fo.disabled"/>
         </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'select'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
           <vcl-select [id]="fo.id"
                       [formControlName]="fo.key"
                       [class.vclError]="hasError"
-                      [mode]="fo.schema.type==='array' ? 'multiple' : 'single'">
+                      [mode]="fo.schema.type==='array' ? 'multiple' : 'single'"
+                      [disabled]="fo.disabled">
             <vcl-select-option *ngFor="let option of fo.options" [value]="option.value" [label]="option.label" [sublabel]="option.sublabel"></vcl-select-option>
           </vcl-select>
         </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'dropdown'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel">
-          <vcl-dropdown
-                        [id]="fo.id"
+          <vcl-dropdown [id]="fo.id"
                         [formControlName]="fo.key"
                         [class.vclError]="hasError"
-                        [mode]="fo.schema.type==='array' ? 'multiple' : 'single'">
+                        [mode]="fo.schema.type==='array' ? 'multiple' : 'single'"
+                        [disabled]="fo.disabled">
             <vcl-dropdown-option *ngFor="let option of fo.options" [value]="option.value" [label]="option.label" [sublabel]="option.sublabel"></vcl-dropdown-option>
           </vcl-dropdown>
         </vcl-input-control-group>
       </ng-container>
 
       <ng-container *ngSwitchCase="'switch'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
-        <vcl-flip-switch
-                         [id]="fo.id"
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
+        <vcl-flip-switch [id]="fo.id"
                          onLabel="{{'Yes' }}"
                          offLabel="{{'No'}}"
-                         [formControlName]="fo.key">
+                         [formControlName]="fo.key"
+                         [disabled]="fo.disabled">
         </vcl-flip-switch>
       </ng-container>
 
       <ng-container *ngSwitchCase="'slider'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
         <vcl-slider [id]="fo.id"
                     [class.vclError]="hasError"
                     [min]="fo.schema.mininum"
                     [max]="fo.schema.maximum"
                     [scale]="fo.schema.scale"
-                    [formControlName]="fo.key">
+                    [formControlName]="fo.key"
+                    [disabled]="fo.disabled">
         </vcl-slider>
       </ng-container>
 
       <ng-container *ngSwitchCase="'checkbox'">
-        <vcl-checkbox [id]="fo.id" [formControlName]="fo.key" [label]="fo.label"></vcl-checkbox>
+        <vcl-checkbox [id]="fo.id" [formControlName]="fo.key" [label]="fo.label" [disabled]="fo.disabled" [hideLabel]="fo.hideLabel"></vcl-checkbox>
       </ng-container>
 
       <ng-container *ngSwitchCase="'radio'">
-        <label vcl-form-control-label [label]="fo.label" [for]="fo.id"></label>
+        <label vcl-form-control-label *ngIf="!fo.hideLabel" [label]="fo.label" [for]="fo.id"></label>
         <vcl-input-control-group [type]="'error'" [label]="errorLabel" inline=true>
           <vcl-radio-group [id]="fo.id" [formControlName]="fo.key"
                             [class.vclError]="hasError">
-            <vcl-radio-button *ngFor="let option of fo.options" [label]="option.label" [value]="option.value"></vcl-radio-button>
+            <vcl-radio-button *ngFor="let option of fo.options"
+                              [label]="option.label"
+                              [value]="option.value"
+                              [disabled]="fo.disabled"></vcl-radio-button>
           </vcl-radio-group>
         </vcl-input-control-group>
       </ng-container>
@@ -124,7 +139,7 @@
       <ng-container *ngSwitchCase="'submit'">
         <button vcl-button
                 type="submit"
-                [disabled]="fo.schema.autoDisable && !form.valid"
+                [disabled]="(fo.schema.autoDisable && !form.valid) || fo.disabled"
                 [prepIcon]="fo.schema.prepIcon"
                 [appIcon]="fo.schema.appIcon"
                 [ngClass]="fo.schema.class"
@@ -139,7 +154,8 @@
                 [appIcon]="fo.schema.appIcon"
                 [ngClass]="fo.schema.class"
                 [label]="fo.schema.label"
-                (tap)="onAction(fo.schema.action || fo.schema)"></button>
+                (tap)="onAction(fo.schema.action || fo.schema)"
+                [disabled]="fo.disabled"></button>
       </ng-container>
 
       <ng-container *ngSwitchCase="'buttons'">
@@ -148,7 +164,7 @@
             <ng-container *ngIf="btnFo.formType === 'submit'">
               <button vcl-button
                       type="submit"
-                      [disabled]="btnFo.schema.autoDisable && !form.valid"
+                      [disabled]="(btnFo.schema.autoDisable && !form.valid) || fo.disabled"
                       [prepIcon]="btnFo.schema.prepIcon"
                       [appIcon]="btnFo.schema.appIcon"
                       [ngClass]="btnFo.schema.class"
@@ -163,7 +179,8 @@
                       [appIcon]="btnFo.schema.appIcon"
                       [ngClass]="btnFo.schema.class"
                       [label]="btnFo.schema.label"
-                      (tap)="onAction(btnFo.schema.action || button)"></button>
+                      (tap)="onAction(btnFo.schema.action || button)"
+                      [disabled]="fo.disabled"></button>
             </ng-container>
           </ng-container>
         </div>
